Fix Middle spacing

--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ header{
   
   /* flex-direction: column-reverse; */
 
-  height: 100vh;
+  height: 90vh;
   margin:0 0 10% 0 ;
 }
 /* weather Display Container */
